# my_code_base

./: .cproject  .project  0_clean_temp.bat  0_fix_indents.bat  1_git_add.bat  BinaryTreeInorderTraversal.c  BinaryTreeInorderTraversal.h  Makefile  aes.c  aes.h  aes256.c  aes256.h  aes256_cbc.c  aes_test.c  aes_test.h  algorithms.c  algorithms.h  algorithms_oop.cpp  algorithms_oop.h  algorithms_test.c  amount_of_uio_states.c  amount_of_uio_states.h  array_type.h  arrays.c  arrays.h  arrays_test.c  arrays_test.h  artificial_neural_network.c  artificial_neural_network.h  auriga_task.c  auriga_task.h  auriga_task_origin.c  auriga_task_origin.h  avl_tree.c  avl_tree.h  bin_heap.c  bin_heap.h  bin_heap_array.c  bin_heap_array.h  bin_search_tree.c  (+203 more)
0_code_master/: 0_clean.bat  1_build.bat  3_run.bat  Makefile  jenkins.bat
0_make_headers/: 0_clean.bat  3_run.bat  CMakeLists.txt  Makefile  hash_set.h
9_code_master_cpp/: 0_clean.bat  Makefile  jenkins.bat
ADT/: BinaryTreeInorderTraversal.h  adt.mk  arrays.c  arrays.h  avl_tree.c  bin_heap.h  bin_heap_array.c  bin_search_tree.c  bin_search_tree.h  bin_tree_draw.h  fifo_index.c  fifo_index.h  fifo_uint16.c  fifo_uint16.h  hash_table.c  lifo_char.c  lifo_char.h  linked_list.c  linked_list.h  linked_list_array.c  stack_indexer.h  stack_num.c  stack_str.c  stack_str.h
applications/: applications.c  applications.h  applications.mk
board_scanner/: 0_clean.bat  3_run_board_scanner.bat  Makefile
build_component_tree/: .project  0_clean.bat  1_build.bat  3_run.bat  3_run_smoke_test.bat  4_run.bat  4_run_DCU_V5.bat  5_draw_tree.bat  Makefile  files_tree.dot  mk_dot.txt  mk_list.txt  mk_list_sorted.txt  parse_mk.exe.stackdump  tutorials.txt
code_bloks_code_master/: main.c
code_generator_reg_parser/: 0_clean.bat  1_build.bat  3_run_code_gen.bat  3_run_code_gen_test.bat  3_run_code_gen_tic12400.bat  3_run_code_gen_tja1145.bat  Makefile  ksz8081_reg_parser.c  ksz8081_reg_parser.txt  ksz8081_regs_input.txt  ksz8081_regs_input_test.txt  reg_parser_out.txt  tic12400_register_parser.c  tic12400_register_parser.h
code_master/: 1_build.bat  3_run.bat  Makefile
com_utils/: convert.c  convert.h  device_id.c  device_id.h  diag_report.c  diag_report.h  diag_report_base.c  fifo_char_buffer.h  fifo_index.h  float_utils.c  float_utils.h  log_commands.c  log_commands.h  paused_state.c  paused_state.h  pointer_utils.h  print_format.c  print_format.h  rx_algorithm.c  rx_algorithm.h  rx_uart.c  rx_uart.h  rx_uart_misra.h  rx_utils.c  rx_utils.h  table_utils.c  table_utils.h  task_info.c  task_info.h  terminal_codes.h  uart_common.c  uart_common.h  uart_string_reader.c  uart_string_reader.h  writer_generic.c  writer_generic.h  writer_uart.c  writer_uart.h
core/: core.mk  furi.c  furi.h
cpp_code_master/: 0_clean.bat  3_run.bat  CMakeLists.txt  Makefile  make_jenkins.bat
cpp_display_emitattor/: 0_clean.bat  1_build.bat  3_run.bat  CMakeLists.txt  Makefile  main.c
cpp_display_emitattor/CSFML-2.5-windows-64-bit/include/SFML/: Config.h
crypto/: 0_fix_indents.bat  aes256.c  aes256.h  aes256_cbc.c  aes256_cbc.h  crypto-ms.c  crypto-ms.h  parse_keepass.c  parse_keepass.h  sha256.h  sha256_test.h
decrypt_kee_pass/: 0_clean.bat  3_run.bat  Makefile
enroll_task/: enroll_task.mk  evbox_task.c  evbox_task.h  evbox_task_test.c  evbox_task_test.h
eval_cache/: 0_clean.bat  3_run.bat  4_plot.bat  Makefile
fire_vast_functions/: 0_clean.bat  2_run.bat  CMakeLists.txt  Makefile  fire_vast_functions.bat  fire_vast_functions.cpp  fire_vast_functions.h  preprocSettings.h  unit_test.cpp  unit_test.h
interview_tasks/: dsol_tasks.c  dsol_tasks.h  interview_tasks.mk  ls_l.c  microavia_task.c
lcd_emulator/: 0_clean.bat  1_build.bat  3_run.bat  Makefile  algorithms_oop.cpp
leet_code/: algorithms.h  algorithms_oop.h  bulls_and_cows.cpp  bulls_and_cows.h  combination_sum.cpp  combination_sum.h  compare_version.h  decode_string.c  decode_string.h  decode_way.c  generate_parentheses.cpp  generate_parentheses.h  hotel.c  insert_interval.cpp  insert_interval.h  interval_api.cpp  interval_api.h  interval_list_intersections.cpp  interval_list_intersections.h  intervals.h  leet_code.mk  majority_element.cpp  majority_element.h  meeting_rooms.cpp  merge_interval.cpp  merge_interval.h  min_num_of_swaps.cpp  min_num_of_swaps.h  min_path_diag_scale.c  number_of_atoms.cpp  parse_bool_expr.c  parse_bool_expr.h  permutations.c  permutations.h  repeated_dna_secuenses.cpp  repeated_dna_secuenses.h  roman_to_numbers.cpp  roman_to_numbers.h  russian_doll_envelopes.c  russian_doll_envelopes.h  (+11 more)
lib/: lib.mk
ls_l_tool/: 1_build.bat  3_run.bat  Makefile
make/: toolchain.mk
math/: algorithms.c  algorithms.h  combinations.h  math.mk  permutations.c  permutations.h
reg_parser/: .project  0_clean.bat  3_run.bat  3_run_tja1101.bat  Makefile  build.bat  run.bat  tutorials.txt
reg_parser_ksz/: 1_build.bat  3_run_ksz.bat  3_run_ksz8081.bat  Makefile  ksz8081_confuguration.txt  ksz8081_reg_blob.txt  tutorials.txt
reg_parser_sd_card/: 0_clean.bat  1_build.bat  2_run.bat  3_launch.bat  jenkins.bat  main.c
reg_parser_tic12400/: Makefile
reg_parser_tja1101/: 1_build.bat  3_run_tja1101.bat  Makefile  tja1101_confuguration.txt  tja1101_reg_blob.txt
reg_parser_tja1145/: 3_run_tja1145.bat  Makefile  main.c
register_parsers/: ksz8081_register_parser.c  parse_regs.c  parse_tja1145_regs.h  tja1145_register_parser.h
stm32_vl_discovery/: .cproject  .project  0_static_analysis.bat  STM32F100XB_FLASH.ld  board.c  board.h  board_config.h  cubemx.h  device_flash_info.c  device_flash_info.h  flash_info_commands.c  flash_info_diag_page.c  flash_info_diag_page.h  main.c  main_loop.c  main_loop.h  shell_commands.h  static_analysis.bat  stm32f1xx_hal_conf.h  stm32f1xx_it.c  stm32f1xx_it.h  system_stm32f1xx.c  task_config.h  test_list.c  test_list.h  version.h  version_build.h
system_explore/: system_explore.c  system_explore.h  system_explore.mk
tests/: algorithms_test.c  algorithms_test.h  bin_utils_test.c  compare_version_test.h  compiler_test.c  generate_parser_test.c  sha256_test.c  (+56 more)
(+236 files in other folders)
